about-me spacing correct

--- a/css/style.css
+++ b/css/style.css
@@ -13,4 +13,8 @@ body{
     text-align: center;
 }
 
-
+.about-me{
+    width: 80%;
+    margin: auto;
+    margin-top: 4rem;
+}
